--- a/emnesite.html
+++ b/emnesite.html
@@ -32,94 +32,86 @@
     </header>
     <main>
       <h1>Emnesite</h1>
-      <section class="grid_1-1">
-        <div>
-          <h2>Tema</h2>
-          <p>
-            I dette tema blev vi introduceret til User Experience Design (UX),
-            som er en central del af udviklingen af digitale brugergrænseflader
-            (UI). Dette tema gav en grundlæggende forståelse for samspillet
-            mellem brugere og brugergrænseflader og introducerede teorier,
-            værktøjer og metoder til research, design og test i digital
-            produktudvikling. Temaet havde til formål at give erfaring med
-            udvalgte UX/UI-metoder og lære at præsentere vores design- og
-            udviklingsproces samt formidle research- og testresultater til
-            interessenter.
-          </p>
-          <h3>Opgave</h3>
-          <p>
-            For at få erfaring med overstående fik vi 4 uger til at lavet et
-            website om et valgfrit emne.
-          </p>
-        </div>
+      <section class="baggrund">
         <div class="grid_1-1">
-          <div class="boks">
-            <h3>Min rolle</h3>
-            <ul>
-              <li>Programør</li>
-              <li>Designer</li>
-              <li>Udvikler</li>
-            </ul>
+          <div>
+            <h2>Tema</h2>
+            <p>
+              I dette tema blev vi introduceret til User Experience Design (UX),
+              som er en central del af udviklingen af digitale
+              brugergrænseflader (UI). Dette tema gav en grundlæggende
+              forståelse for samspillet mellem brugere og brugergrænseflader og
+              introducerede teorier, værktøjer og metoder til research, design
+              og test i digital produktudvikling. Temaet havde til formål at
+              give erfaring med udvalgte UX/UI-metoder og lære at præsentere
+              vores design- og udviklingsproces samt formidle research- og
+              testresultater til interessenter.
+            </p>
           </div>
-          <div class="boks">
-            <h3>Nye færdigheder</h3>
-            <ul>
-              <li>Figma</li>
-              <li>Squoosh</li>
-              <li>Brugertest</li>
-            </ul>
+          <div>
+            <h3>Opgave</h3>
+            <p>
+              For at få erfaring med overstående fik vi 4 uger til at lavet et
+              website om et valgfrit emne.
+            </p>
           </div>
         </div>
       </section>
-      <h3>Research og idé</h3>
-      <p>
-        I starten af processen for emnesitet gik vi igang med idégenering som
-        tog form af en brainstorm for emnet på sitete. Her valgte jeg emnet
-        hækle. Derefter gik vi igang med at udforme ideèn i form af moodboard og
-        stylyetile, for at finde udtrykket for sitet.
-      </p>
-      <section class="grid_1-1">
-        <div>
-          <h4>Moodboard</h4>
-          <img src="img/moodboard.webp" alt="Moodboard" />
-        </div>
-        <div>
-          <h4>Styletile</h4>
-          <img src="img/styletile.webp" alt="Styletile" />
+      <section class="baggrund1">
+        <h3>Research og idé</h3>
+        <p>
+          I starten af processen for emnesitet gik vi igang med idégenering som
+          tog form af en brainstorm for emnet på sitete. Her valgte jeg emnet
+          hækle. Derefter gik vi igang med at udforme ideèn i form af moodboard
+          og stylyetile, for at finde udtrykket for sitet.
+        </p>
+        <div class="grid_1-1">
+          <div>
+            <h4>Moodboard</h4>
+            <img src="img/moodboard.webp" alt="Moodboard" />
+          </div>
+          <div>
+            <h4>Styletile</h4>
+            <img src="img/styletile.webp" alt="Styletile" />
+          </div>
         </div>
       </section>
-      <h3>Digital prototype</h3>
-      <p>
-        Efter at havde lavet research, lavede jeg en digital klikbar prototype
-        for at se hvordan sitet ville udforme sig.
-      </p>
-      <img src="img/prototype_em.webp" alt="Prototype emnesite" />
-      <h3>Kodet site</h3>
-      <p>
-        Udfra min digitale prototype begyndte jeg at kode mit site med html og
-        css. Html for at lave strukturen i sitet og css for at style og lave
-        layout. Ny css jeg lærte i dette tema var at implementere fonte og at
-        lave et dynamisk galleri, hvor billederne blender sammen frem for at
-        blive inde for grid linjerne.
-      </p>
-      <p>
-        I HTML gives sektionen for galleriet klassen 'container' og billederne
-        klassen 'galleri'. I CSS bruges klasserne så ledes 'container' bruges
-        til at definere breden, koloner og kolone mellemrum. 'Galleri' bruges
-        til at definere størrelsen på billederne, mellemrum fra billede til
-        billede og til sidst 'break-inside: avoid;' for at billederne samler sig
-        frem for at ligge på kolone linjerne.
-      </p>
-      <section class="grid_1-1">
-        <img src="img/html_em.webp" alt="HTML struktur" />
-        <img src="img/css_em.webp" alt="CSS struktur" />
+      <section class="baggrund">
+        <h3>Digital prototype</h3>
+        <p>
+          Efter at havde lavet research, lavede jeg en digital klikbar prototype
+          for at se hvordan sitet ville udforme sig.
+        </p>
+        <img src="img/prototype_em.webp" alt="Prototype emnesite" />
+        <h3>Kodet site</h3>
+        <p>
+          Udfra min digitale prototype begyndte jeg at kode mit site med html og
+          css. Html for at lave strukturen i sitet og css for at style og lave
+          layout. Ny css jeg lærte i dette tema var at implementere fonte og at
+          lave et dynamisk galleri, hvor billederne blender sammen frem for at
+          blive inde for grid linjerne.
+        </p>
+        <p>
+          I HTML gives sektionen for galleriet klassen 'container' og billederne
+          klassen 'galleri'. I CSS bruges klasserne så ledes 'container' bruges
+          til at definere breden, koloner og kolone mellemrum. 'Galleri' bruges
+          til at definere størrelsen på billederne, mellemrum fra billede til
+          billede og til sidst 'break-inside: avoid;' for at billederne samler
+          sig frem for at ligge på kolone linjerne.
+        </p>
+        <section class="grid_1-1">
+          <img src="img/html_em.webp" alt="HTML struktur" />
+          <img src="img/css_em.webp" alt="CSS struktur" />
+        </section>
       </section>
       <h3>Præsentation</h3>
       <p></p>
-      <h4>Se det færdige produkt her:</h4>
-      <a href="https://idaholmterp.dk/kea/03_ux/01_kodet_site/index.html"
-        >Website</a
-      >
+      <section class="baggrund">
+        <h4>Se det færdige produkt her:</h4>
+        <a href="https://idaholmterp.dk/kea/03_ux/01_kodet_site/index.html"
+          >Website</a
+        >
+      </section>
     </main>
     <footer class="grid_1-1-1">
       <p>Portfolioeksamen</p>
