--- a/spil.html
+++ b/spil.html
@@ -32,34 +32,59 @@
     </header>
     <main>
       <h1>Spil</h1>
-      <h2>Tema</h2>
-      <p>
-        I dette tema blev vi introduceret til programmeringssproget JavaScript,
-        som kan bruges til at kode dynamiske websites. I dette tema brugte vi
-        JavaScript sammen med CSS-animationer til at skabe et lille spil.
-        Formålet med dette tema var, at vi begynder at arbejde professionelt med
-        formgivning af grafiske elementer. Vi analyserede spildesign og
-        undersøgte, hvordan man engagerer brugere gennem teori og konventioner
-        inden for UI-elementer, figurelementer, baggrundsdesign og
-        kompositionsteknikker. Vi udviklede vores eget spildesign efter moderne
-        konventioner og rentegner grafikken til spillet i Adobe Illustrator.
-        Gennem arbejdet med vores eget spil lærer vi at arbejde med aktivitets-
-        og statemachine-diagrammer, som bruges til at planlægge det mere
-        komplicerede interaktive flow.
-      </p>
-      <h3>Opgave</h3>
-      <p>
-        Spillet skal have et koncept og en idé, som du selv finder frem til, og
-        du skal designe alle elementer og kode spillet helt fra bunden.
-      </p>
-      <h4>Spil idé</h4>
-      <h4>Design</h4>
-      <h4>Kodet spil</h4>
-      <p></p>
-      <h4>Se det færdige produkt her:</h4>
-      <a href="https://idaholmterp.dk/kea/04_animation/website/index.html"
-        >Website</a
-      >
+      <section class="baggrund">
+        <div class="grid_1-1">
+          <div>
+            <h2>Tema</h2>
+            <p>
+              I dette tema blev vi introduceret til programmeringssproget
+              JavaScript, som kan bruges til at kode dynamiske websites. I dette
+              tema brugte vi JavaScript sammen med CSS-animationer til at skabe
+              et lille spil. Formålet med dette tema var, at vi begynder at
+              arbejde professionelt med formgivning af grafiske elementer. Vi
+              analyserede spildesign og undersøgte, hvordan man engagerer
+              brugere gennem teori og konventioner inden for UI-elementer,
+              figurelementer, baggrundsdesign og kompositionsteknikker. Vi
+              udviklede vores eget spildesign efter moderne konventioner og
+              rentegner grafikken til spillet i Adobe Illustrator. Gennem
+              arbejdet med vores eget spil lærer vi at arbejde med aktivitets-
+              og statemachine-diagrammer, som bruges til at planlægge det mere
+              komplicerede interaktive flow.
+            </p>
+          </div>
+          <div>
+            <h3>Opgave</h3>
+            <p>
+              Spillet skal have et koncept og en idé, som du selv finder frem
+              til, og du skal designe alle elementer og kode spillet helt fra
+              bunden.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="baggrund1">
+        <h4>Spil idé</h4>
+        <div class="grid_1-1">
+          <img src="img/aktivitetdiagram.webp" alt="aktivitetdiagram" />
+          <img
+            src="img/statemachinediagram.webp"
+            alt="statemachine-diagrammer"
+          />
+        </div>
+      </section>
+      <section class="baggrund">
+        <h4>Design</h4>
+      </section>
+      <section class="baggrund1">
+        <h4>Kodet spil</h4>
+        <p></p>
+      </section>
+      <section class="baggrund">
+        <h4>Se det færdige produkt her:</h4>
+        <a href="https://idaholmterp.dk/kea/04_animation/website/index.html"
+          >Website</a
+        >
+      </section>
     </main>
     <footer class="grid_1-1-1">
       <p>Portfolioeksamen</p>
