--- a/prøve.html
+++ b/prøve.html
@@ -9,6 +9,9 @@
   <body>
     <header><h1>Prøve</h1></header>
     <main>
+      <div class="og">
+        <h1>hej</h1>
+      </div>
       <section class="baggrund">
         <div class="flex">
           <div class="grid_1-1">
