--- a/website.html
+++ b/website.html
@@ -31,7 +31,9 @@
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
-      <h1 class="overskrift">Website</h1>
+      <div class="overskrift">
+        <h1>Website</h1>
+      </div>
       <section class="baggrund">
         <div class="flex">
           <div class="grid_1-1">
@@ -59,7 +61,7 @@
           </div>
         </div>
       </section>
-      <section class="">
+      <section class="baggrund1">
         <div class="grid_1-1">
           <div>
             <h4>Wireframes</h4>
@@ -71,22 +73,26 @@
           </div>
         </div>
       </section>
-      <h4>HTML</h4>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores
-        delectus vitae nisi recusandae, laudantium ut.
-      </p>
-      <img src="" alt="" />
-      <h4>CSS</h4>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit,
-        repudiandae aut. Aspernatur ad esse qui?
-      </p>
-      <img src="" alt="" />
-      <h4>Se det færdige produkt her:</h4>
-      <a href="https://idaholmterp.dk/02_web/01_website/website/index.html"
-        >Website</a
-      >
+      <div class="baggrund1">
+        <h4>HTML</h4>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores
+          delectus vitae nisi recusandae, laudantium ut.
+        </p>
+        <img src="" alt="" />
+        <h4>CSS</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit,
+          repudiandae aut. Aspernatur ad esse qui?
+        </p>
+        <img src="" alt="" />
+      </div>
+      <div class="baggrund">
+        <h4>Se det færdige produkt her:</h4>
+        <a href="https://idaholmterp.dk/02_web/01_website/website/index.html"
+          >Website</a
+        >
+      </div>
     </main>
     <footer class="grid_1-1-1">
       <p>Portfolioeksamen</p>
