Indhold på sitet

--- a/emnesite.html
+++ b/emnesite.html
@@ -27,7 +27,7 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
-      <img src="img/forside.webp" alt="" />
+      <a href="index.html"><img src="img/forside.webp" alt="" /></a>
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
@@ -37,6 +37,17 @@
           <div>
             <h2>Tema</h2>
             <p>
+              I Tema 4 lærte vi om hele processen med at lavet et fuldendt
+              website fra a til å. Igennem dette tema blev vi introduceret til
+              flere del opgaver idègenerer, designe samt test af website.
+              layoutprincipper: A, B, C (her demonstrerer du viden). Jeg valgte
+              at bruge princip B til at løse den efterfølgende opgave på
+              følgende måde (her demonstrerer du færdighed). Jeg valgte at bruge
+              det princip til min løsning fremfor A & C, fordi [...] (her
+              demonstrerer du kompetence). I Tema Y (link) brugte jeg også
+              layoutprincipper, men jeg gjorde det anderledes.
+            </p>
+            <!-- <p>
               I dette tema blev vi introduceret til User Experience Design (UX),
               som er en central del af udviklingen af digitale
               brugergrænseflader (UI). Dette tema gav en grundlæggende
@@ -46,7 +57,7 @@
               give erfaring med udvalgte UX/UI-metoder og lære at præsentere
               vores design- og udviklingsproces samt formidle research- og
               testresultater til interessenter.
-            </p>
+            </p> -->
           </div>
           <div>
             <h3>Opgave</h3>
@@ -104,8 +115,8 @@
           <img src="img/css_em.webp" alt="CSS struktur" />
         </section>
       </section>
-      <h3>Præsentation</h3>
-      <p></p>
+      <!-- <h3>Præsentation</h3>
+      <p></p> -->
       <section class="baggrund">
         <h4>Se det færdige produkt her:</h4>
         <a href="https://idaholmterp.dk/kea/03_ux/01_kodet_site/index.html"
