--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Forside</title>
   </head>
   <body>
-    <header class="grid_1-1">
+    <header class="grid_1-1-1">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
@@ -27,6 +27,7 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
+      <p></p>
       <a href="ommig.html" class="ommig">Om mig</a>
     </header>
     <main>
