--- a/spil.html
+++ b/spil.html
@@ -63,13 +63,18 @@
         </div>
       </section>
       <section class="baggrund1">
-        <h4>Spil idé</h4>
         <div class="grid_1-1">
-          <img src="img/aktivitetdiagram.webp" alt="aktivitetdiagram" />
-          <img
-            src="img/statemachinediagram.webp"
-            alt="statemachine-diagrammer"
-          />
+          <div>
+            <h4>Spil idé</h4>
+            <p></p>
+          </div>
+          <div>
+            <img src="img/aktivitetdiagram.webp" alt="aktivitetdiagram" />
+            <img
+              src="img/statemachinediagram.webp"
+              alt="statemachine-diagrammer"
+            />
+          </div>
         </div>
       </section>
       <section class="baggrund">
