--- a/website.html
+++ b/website.html
@@ -39,7 +39,7 @@
           <div class="grid_1-1">
             <div>
               <h2>Tema</h2>
-              <p>
+              <!-- <p>
                 I dette tema bliv vi introduceret til de grundlæggende og mest
                 anvendte redskaber i en multimediedesigners værktøjskasse. Disse
                 redskaber danner fundamentet for resten af uddannelsen på MMD.
@@ -48,20 +48,51 @@
                 digital kommunikation og responsivt webdesign. Der blev
                 undervist i HTML og CSS, samt grundlæggende færdigheder i
                 grafikopsætning af tekst og billeder i Figma.
+              </p> -->
+              <p>
+                I Tema 2 grundlæggende web lærte vi om generel HTML og CSS.
+                Disse færdigheder brugte vi til først at lave mobilsite, for
+                derefter lav en respontiv website som også fungerede som
+                studiestarts prøve. Derudover blev vi introduceret til de
+                grundlæggende færdigheder i grafisk opsætning af tekst og
+                billeder i Figma, som vi brugte i tema 3.
               </p>
             </div>
+            <!-- <p>
+              forskellige layoutprincipper: A, B, C (her demonstrerer du viden).
+              Jeg valgte at bruge princip B til at løse den efterfølgende opgave
+              på følgende måde (her demonstrerer du færdighed). Jeg valgte at
+              bruge det princip til min løsning fremfor A & C, fordi [...] (her
+              demonstrerer du kompetence). I Tema Y (link) brugte jeg også
+              layoutprincipper, men jeg gjorde det anderledes.
+            </p> -->
             <div>
               <h3>Opgave</h3>
               <p>
-                I website opgaven skulle vi lave et website ud fra udleveret
-                wireframes og layoutsiagrammer. Dette skulle vi gøre ved brug af
-                HTML til at opbygge siden, og CSS til styling og layout.
+                I website opgaven fik jeg udleveret wireframes, layoutdiagram
+                samt indhold (billede og tekst) til at lave et færdigt
+                responsivt design.
               </p>
+              <!-- <p>
+                I website opgaven lavede jeg et website ud fra udleveret
+                wireframes, layoutsiagrammer samt udleveret indhold (tekst og
+                billede). Dette gjorde jeg ved brug af HTML til at opbygge
+                siden, og CSS til styling og layout.
+              </p> -->
             </div>
           </div>
         </div>
       </section>
       <section class="baggrund1">
+        <h4>Metode</h4>
+        <p>
+          Jeg opbyggede og stylede websitet med udleveret indhold.
+          <!-- I denne opgave blev vi introduceret til HTML og CSS.-->
+          Dette gjorde jeg ved brugt af HTML til indholdet og CSS til at lave
+          layout ud fra udleveret wireframes og layoutdiagram. Dette gjorde jeg
+          igennem HTML sectioner, div og classes. Ved brug af CSS definerede jeg
+          grid, layout samt design med farve og font-family.
+        </p>
         <div class="grid_1-1">
           <div>
             <h4>Wireframes</h4>
@@ -73,8 +104,33 @@
           </div>
         </div>
       </section>
-      <div class="baggrund1">
-        <h4>HTML</h4>
+      <!-- <div class="baggrund1"> -->
+
+      <!-- <p opgave beskrivelse>
+          I opgave X var vores mål at lave et redesign for en forbedret
+          brugeroplevelse af løsning Y (viden). Min rolle var [indsæt din
+          hovedrolle og ansvarsområder], som jeg udførte [specifik måde med
+          specifikke værktøjer eller metoder] (færdighed). Det lærte mig
+          vigtigheden af [værktøj/metode], som jeg senere brugte i
+          Opgavebeskrivelse Portfolioeksamen Forår 2024 Side 2 af 3 [fremtidigt
+          projekt eller videreudvikling]. Udviklingsprocessen kan ses i
+          [illustrationer eller visualiseringer] i figur 1 (kompetence). Det
+          sværeste var [svar], som jeg derfor var ekstra opmærksom på at blive
+          bedre til i [øvelse/opgave/projekt] (link) sidst på semesteret.
+        </p> -->
+
+      <!-- <p>
+          Jeg opbyggede og stylede en hjemmeside med udleveret indhold. Ud fra
+          udleveret wireframes og Layoutdiagram, brugte jeg HTML og CSS, til at
+          opbygge og style hjemmesiden. I det efterfølegende projekter har jeg
+          videre brugt HTML og CSS, senere i tema 4 i samspil med JavaScript.
+          udførte testen på følgende måde [...] med følgende resultat [...], og
+          det gav anledning til følgende ændringer [...] i mit design
+          (færdighed). I det efterfølgende gruppeprojekt brugte vi igen
+          testmetoden X i forhold til at undersøge følgende [...] (kompetence).
+          Processen, som jeg gennemgik, foregik sådan: [beskriv]
+        </p> -->
+      <!-- <h4>HTML</h4>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores
           delectus vitae nisi recusandae, laudantium ut.
@@ -85,14 +141,28 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit,
           repudiandae aut. Aspernatur ad esse qui?
         </p>
-        <img src="" alt="" />
-      </div>
-      <div class="baggrund">
-        <h4>Se det færdige produkt her:</h4>
-        <a href="https://idaholmterp.dk/02_web/01_website/website/index.html"
-          >Website</a
-        >
-      </div>
+        <img src="" alt="" /> -->
+      <!-- </div> -->
+      <section class="baggrund">
+        <div class="grid_1-1">
+          <div>
+            <h4>Se det færdige produkt her:</h4>
+            <a
+              class="website"
+              href="https://idaholmterp.dk/02_web/01_website/website/index.html"
+              >Website <i class="arrow"></i
+            ></a>
+          </div>
+          <div>
+            <h4>Kompenancer</h4>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Figma</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="grid_1-1-1">
       <p>Portfolioeksamen</p>
