--- a/ommig.html
+++ b/ommig.html
@@ -32,41 +32,45 @@
     </header>
     <main>
       <h1>Om mig</h1>
-      <div class="grid_1-2">
-        <img class="potrat" src="img/potrat.jpeg" alt="Potræt" />
-        <div>
-          <h2>Uddanelse</h2>
-          <p>
-            Jeg har en studenter eksamen fra Niels Brock Innovationsgymnasie,
-            hvor jeg gik på projektleder linjen. Her fik en god viden og
-            kendskab til virksomheds opbygning og økonomi. Derudover har jeg i
-            forbindelse med min stilling som Sales and Servies Assistent i
-            Magasin, taget et kursus i cross channel, som giver 5 ETCS point.
-            Jeg har også været på dagshøjskolen VERA, hvor jeg havde grafisk
-            kommunikation som fag, dette har været med til at give mig blod på
-            tanden inde for grafisk design faget. Jeg er startet på
-            multimediedesign på KEA, i januar 2024 og bliver færdig januar 2026.
-          </p>
+      <section class="baggrund">
+        <div class="grid_1-1">
+          <img class="potrat" src="img/potrat.jpeg" alt="Potræt" />
+          <div>
+            <h2>Uddanelse</h2>
+            <p>
+              Jeg har en studenter eksamen fra Niels Brock Innovationsgymnasie,
+              hvor jeg gik på projektleder linjen. Her fik en god viden og
+              kendskab til virksomheds opbygning og økonomi. Derudover har jeg i
+              forbindelse med min stilling som Sales and Servies Assistent i
+              Magasin, taget et kursus i cross channel, som giver 5 ETCS point.
+              Jeg har også været på dagshøjskolen VERA, hvor jeg havde grafisk
+              kommunikation som fag, dette har været med til at give mig blod på
+              tanden inde for grafisk design faget. Jeg er startet på
+              multimediedesign på KEA, i januar 2024 og bliver færdig januar
+              2026.
+            </p>
+            <h2>Erfaring</h2>
+            <p>
+              Jeg har i mange år arbejdet i butik. Jeg startede på en kaffebar
+              tilbage i xxxx, på sammen tid fik jeg arbejde i Flying Tiger, hvor
+              jeg både var som salgsassistent under 18 og blev lukkeansvarlig
+              som over 18. Dette arbejde blev dog skiftet ud med Magasin tilbage
+              i 2021, hvor jeg har haft en række forskelleige stillinger Sales
+              and Service Assistent, Operational Sales Support og Visual Sales
+              Support. Jeg stoppede i Magasin tilbage marts 2024.
+            </p>
+            <h2>Hobby</h2>
+            <p>
+              Jeg har mange kreative hobbyer, her ibland hækle, lave perler, sy
+              mm. Jeg er glad for mine hobbyer, da det er min måde at få ro på
+              og udtrykke mig selv. Jeg bliver inspireret til nye hobbyer og
+              projekter ude i verden, på internettet og gennem mine bekendte.
+              Udover mine hobbyer er jeg glad for at være sammen med mine
+              veninder og min familie.
+            </p>
+          </div>
         </div>
-      </div>
-      <h2>Erfaring</h2>
-      <p>
-        Jeg har i mange år arbejdet i butik. Jeg startede på en kaffebar tilbage
-        i xxxx, på sammen tid fik jeg arbejde i Flying Tiger, hvor jeg både var
-        som salgsassistent under 18 og blev lukkeansvarlig som over 18. Dette
-        arbejde blev dog skiftet ud med Magasin tilbage i 2021, hvor jeg har
-        haft en række forskelleige stillinger Sales and Service Assistent,
-        Operational Sales Support og Visual Sales Support. Jeg stoppede i
-        Magasin tilbage marts 2024.
-      </p>
-      <h2>Hobby</h2>
-      <p>
-        Jeg har mange kreative hobbyer, her ibland hækle, lave perler, sy mm.
-        Jeg er glad for mine hobbyer, da det er min måde at få ro på og udtrykke
-        mig selv. Jeg bliver inspireret til nye hobbyer og projekter ude i
-        verden, på internettet og gennem mine bekendte. Udover mine hobbyer er
-        jeg glad for at være sammen med mine veninder og min familie.
-      </p>
+      </section>
     </main>
     <footer class="grid_1-1-1">
       <p>Portfolioeksamen</p>
