--- a/spil.html
+++ b/spil.html
@@ -63,12 +63,27 @@
         </div>
       </section>
       <section class="baggrund1">
-        <div class="grid_1-1">
-          <div>
-            <h4>Spil idé</h4>
-            <p></p>
-          </div>
-          <div>
+        <!-- <div class="grid_1-1"> -->
+        <div>
+          <h3>Metode</h3>
+          <h4>Spil idé</h4>
+          <p>
+            For at finde ud af hvordan mit spil skulle se ud, lavede jeg
+            forskellige øvelser, brainstorm og moodbords. Min idé var at lave et
+            spil med køer og alien, som også referere til en del af vores
+            popkultur.
+          </p>
+          <div class="grid_1-1-1">
+            <div>
+              <h4>Kodet spil</h4>
+              <p>
+                Efter at havde fundet en idé til spillet med gode og dårlige
+                elementer, lavede jeg aktivitetdiagram og state machine-diagram
+                for mit spil. Diagrammerne er med til at hjælpe når spillet skal
+                kodes, så prograrømren ved hvordan det skal bygges op i HTML,
+                CSS og JavaScript.
+              </p>
+            </div>
             <img src="img/aktivitetdiagram.webp" alt="aktivitetdiagram" />
             <img
               src="img/statemachinediagram.webp"
@@ -76,14 +91,15 @@
             />
           </div>
         </div>
+        <!-- </div> -->
       </section>
-      <section class="baggrund">
+      <!-- <section class="baggrund">
         <h4>Design</h4>
       </section>
       <section class="baggrund1">
         <h4>Kodet spil</h4>
         <p></p>
-      </section>
+      </section> -->
       <section class="baggrund">
         <h4>Se det færdige produkt her:</h4>
         <a href="https://idaholmterp.dk/kea/04_animation/website/index.html"
