--- a/emnesite.html
+++ b/emnesite.html
@@ -117,7 +117,8 @@
         <h3>Digital prototype</h3>
         <p>
           Efter at havde lavet research, lavede jeg en digital klikbar prototype
-          for at se hvordan sitet ville udforme sig.
+          for at se hvordan sitet ville udforme sig. Digital prototype har jeg
+          brugt igen i Tema 5.
         </p>
         <img src="img/prototype_em.webp" alt="Prototype emnesite" />
         <h3>Kodet site</h3>
