--- a/passion.html
+++ b/passion.html
@@ -32,30 +32,44 @@
     </header>
     <main>
       <h1>Passionsite</h1>
-      <h2>Tema</h2>
-      <p>
-        I dette tema fik vi grundlæggende indførsel i indholdsproduktion,
-        herunder præproduktion, selve produktionen samt postproduktion. Vi
-        benytter smartphonekameraer til optagelse af video og ekstern lyd og
-        anvender Premiere Pro til redigering. Dette er væsentligt for at kunne
-        lave mindre indholdsproduktioner selv, samt for bedre at kunne
-        kommunikere professionelt med kunder. Vi arbejde også med animeret
-        vektorgrafik (Lottiefiles). Vi bliv introduceret til grundlæggende
-        faglige begreber inden for indholdsproduktion, og vi benyttede derudover
-        de færdigheder, som vi havde fået i de foregående temaer, til at
-        redesigne en virksomhedshjemmeside.
-      </p>
-      <h3>Opgave</h3>
-      <p>I denne opgave</p>
-      <h4>Forbereding til opgavelse</h4>
+      <section class="baggrund">
+        <div class="grid_1-1">
+          <div>
+            <h2>Tema</h2>
+            <p>
+              I dette tema fik vi grundlæggende indførsel i indholdsproduktion,
+              herunder præproduktion, selve produktionen samt postproduktion. Vi
+              benytter smartphonekameraer til optagelse af video og ekstern lyd
+              og anvender Premiere Pro til redigering. Dette er væsentligt for
+              at kunne lave mindre indholdsproduktioner selv, samt for bedre at
+              kunne kommunikere professionelt med kunder. Vi arbejde også med
+              animeret vektorgrafik (Lottiefiles). Vi bliv introduceret til
+              grundlæggende faglige begreber inden for indholdsproduktion, og vi
+              benyttede derudover de færdigheder, som vi havde fået i de
+              foregående temaer, til at redesigne en virksomhedshjemmeside.
+            </p>
+          </div>
+          <div>
+            <h3>Opgave</h3>
+            <p>I denne opgave</p>
+          </div>
+        </div>
+      </section>
+      <section class="baggrund1">
+        <h4>Metode</h4>
+        <p></p>
+      </section>
+      <!-- <h4>Forbereding til opgavelse</h4>
       <h4>Optagelse</h4>
       <h4>Video</h4>
       <h4>Billeder</h4>
-      <h4>Hero section</h4>
-      <h4>Se det færdige produkt her:</h4>
-      <a href="https://idaholmterp.dk/kea/04_animation/website/index.html"
-        >Website</a
-      >
+      <h4>Hero section</h4> -->
+      <section class="baggrund">
+        <h4>Se det færdige produkt her:</h4>
+        <a href="https://idaholmterp.dk/kea/04_animation/website/index.html"
+          >Website</a
+        >
+      </section>
     </main>
     <footer class="grid_1-1-1">
       <p>Portfolioeksamen</p>
