--- a/spil.html
+++ b/spil.html
@@ -80,8 +80,8 @@
                 Efter at havde fundet en idé til spillet med gode og dårlige
                 elementer, lavede jeg aktivitetdiagram og state machine-diagram
                 for mit spil. Diagrammerne er med til at hjælpe når spillet skal
-                kodes, så prograrømren ved hvordan det skal bygges op i HTML,
-                CSS og JavaScript.
+                kodes, så prograrømren ved hvad de forskellige elementer skal og
+                dermed hvordan det skal bygges op i HTML, CSS og JavaScript.
               </p>
             </div>
             <img src="img/aktivitetdiagram.webp" alt="aktivitetdiagram" />
