--- a/passion.html
+++ b/passion.html
@@ -57,7 +57,21 @@
       </section>
       <section class="baggrund1">
         <h4>Metode</h4>
-        <p></p>
+        <p>
+          Jeg startede processen med at lave et xxxxx for at finde ud af hvilke
+          skud jeg skulle have, da jeg skulle ud og filme. Da jeg havde været ud
+          og filme, begyndt jeg at at klippe i Primerie pro?????. Som vi blev
+          introduceret til med nogle små klippe opgaver.
+        </p>
+        <p>
+          Efter at havde klippet videoen, ud fra de krav der var givet af
+          lærene. Satte jeg websitet op ud fra det wireframe som også var givet,
+          her implementeret jeg videoen både dirkete på sitet med HTML og som
+          video fra Youtube. Derudover skulle jeg lave en LottieFile som en
+          herosection. Lottiefile er lavet i Aftereffect og oploadet på
+          Lottiefile og implementeret på siden den vej igennem, dette gør at
+          filen ikke fulder nær så meget som hvis det var en video.
+        </p>
       </section>
       <!-- <h4>Forbereding til opgavelse</h4>
       <h4>Optagelse</h4>
@@ -66,7 +80,9 @@
       <h4>Hero section</h4> -->
       <section class="baggrund">
         <h4>Se det færdige produkt her:</h4>
-        <a href="https://idaholmterp.dk/kea/04_animation/website/index.html"
+        <a
+          class="website"
+          href="https://idaholmterp.dk/kea/04_animation/website/index.html"
           >Website</a
         >
       </section>
