--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -33,46 +33,57 @@
     </header>
     <main>
       <h1>virksomhedsite</h1>
-      <section class="temaopgave">
-        <h2>Tema</h2>
-        <p>
-          I dette tema fik vi grundlæggende indførsel i indholdsproduktion,
-          herunder præproduktion, selve produktionen samt postproduktion. Vi
-          benytter smartphonekameraer til optagelse af video og ekstern lyd og
-          anvender Premiere Pro til redigering. Dette er væsentligt for at kunne
-          lave mindre indholdsproduktioner selv, samt for bedre at kunne
-          kommunikere professionelt med kunder. Vi arbejde også med animeret
-          vektorgrafik (Lottiefiles). Vi bliv introduceret til grundlæggende
-          faglige begreber inden for indholdsproduktion, og vi benyttede
-          derudover de færdigheder, som vi havde fået i de foregående temaer,
-          til at redesigne en virksomhedshjemmeside.
-        </p>
-        <h3>Opgave</h3>
-        <p>
-          I denne opgave skulle vi prøve kræfter med at redesigne en selvvalgt
-          virksomheds website. Redesignet skulle munde ud i et kodet website og
-          indeholde indholdsproduktioner i form af fx tekst, foto, LottieFiles
-          og video. Dette var et gruppeprojekt.
-        </p>
+      <section class="baggrund">
+        <div class="grid_1-1">
+          <div>
+            <h2>Tema</h2>
+            <p>
+              I dette tema fik vi grundlæggende indførsel i indholdsproduktion,
+              herunder præproduktion, selve produktionen samt postproduktion. Vi
+              benytter smartphonekameraer til optagelse af video og ekstern lyd
+              og anvender Premiere Pro til redigering. Dette er væsentligt for
+              at kunne lave mindre indholdsproduktioner selv, samt for bedre at
+              kunne kommunikere professionelt med kunder. Vi arbejde også med
+              animeret vektorgrafik (Lottiefiles). Vi bliv introduceret til
+              grundlæggende faglige begreber inden for indholdsproduktion, og vi
+              benyttede derudover de færdigheder, som vi havde fået i de
+              foregående temaer, til at redesigne en virksomhedshjemmeside.
+            </p>
+          </div>
+          <div>
+            <h3>Opgave</h3>
+            <p>
+              I denne opgave skulle vi prøve kræfter med at redesigne en
+              selvvalgt virksomheds website. Redesignet skulle munde ud i et
+              kodet website og indeholde indholdsproduktioner i form af fx
+              tekst, foto, LottieFiles og video. Dette var et gruppeprojekt.
+            </p>
+          </div>
+        </div>
       </section>
-      <h4>Idéudvikling</h4>
-      <p>
-        Ud fra vores valgte website Klodshans, begynde vi at idéudvikle på
-        hvordan design af hjemmesiden skulle se ud. I denne del af processen
-        lavede vi moodboards og styletile.
-      </p>
-      <h4>Indholdsproduktion</h4>
-      <p>
-        For at vise virksomheden bedste frem tog vi ud og lavede optagelser og
-        tog billeder til sitet. Derudover brugte vi tekst og billeder, der
-        allerede var på sitet, samt vektorgrafik som vi tegnede i Illustator.
-      </p>
-      <h4>Test</h4>
-      <p>Efter at havde kodet vores</p>
-      <h4>Se det færdige produkt her:</h4>
-      <a href="https://idaholmterp.dk/kea/05_indhold/virksomhedsite/index.html"
-        >Website</a
-      >
+      <section class="baggrund1">
+        <h4>Idéudvikling</h4>
+        <p>
+          Ud fra vores valgte website Klodshans, begynde vi at idéudvikle på
+          hvordan design af hjemmesiden skulle se ud. I denne del af processen
+          lavede vi moodboards og styletile.
+        </p>
+        <h4>Indholdsproduktion</h4>
+        <p>
+          For at vise virksomheden bedste frem tog vi ud og lavede optagelser og
+          tog billeder til sitet. Derudover brugte vi tekst og billeder, der
+          allerede var på sitet, samt vektorgrafik som vi tegnede i Illustator.
+        </p>
+        <h4>Test</h4>
+        <p>Efter at havde kodet vores</p>
+      </section>
+      <section class="baggrund">
+        <h4>Se det færdige produkt her:</h4>
+        <a
+          href="https://idaholmterp.dk/kea/05_indhold/virksomhedsite/index.html"
+          >Website</a
+        >
+      </section>
     </main>
     <footer class="grid_1-1-1">
       <p>Portfolioeksamen</p>
