--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -62,24 +62,28 @@
         </div>
       </section>
       <section class="baggrund1">
-        <h4>Idéudvikling</h4>
-        <p>
-          Ud fra vores valgte website Klodshans, begynde vi at idéudvikle på
-          hvordan design af hjemmesiden skulle se ud. I denne del af processen
-          lavede vi moodboards og styletile.
-        </p>
-        <h4>Indholdsproduktion</h4>
-        <p>
-          For at vise virksomheden bedste frem tog vi ud og lavede optagelser og
-          tog billeder til sitet. Derudover brugte vi tekst og billeder, der
-          allerede var på sitet, samt vektorgrafik som vi tegnede i Illustator.
-        </p>
-        <h4>Test</h4>
-        <p>Efter at havde kodet vores</p>
+        <div>
+          <div>
+            <h3>Metode</h3>
+            <p>
+              Ud fra vores valgte website Klodshans, begynde vi at idéudvikle på
+              hvordan design af hjemmesiden skulle se ud. I denne del af
+              processen lavede vi moodboards og styletile.
+            </p>
+            <p>
+              For at vise virksomheden bedste frem tog vi ud til Virksomheden og
+              lavede optagelser og tog billeder til sitet. Derudover brugte vi
+              tekst og billeder, der allerede var på sitet, samt vektorgrafik
+              som vi tegnede i Illustator.
+            </p>
+            <p></p>
+          </div>
+        </div>
       </section>
       <section class="baggrund">
         <h4>Se det færdige produkt her:</h4>
         <a
+          class="website"
           href="https://idaholmterp.dk/kea/05_indhold/virksomhedsite/index.html"
           >Website</a
         >
