--- a/website.html
+++ b/website.html
@@ -95,12 +95,12 @@
         </p>
         <div class="grid_1-1">
           <div>
-            <h4>Wireframes</h4>
             <img src="img/wireframe_website.png" alt="" />
+            <figcaption>Wireframe</figcaption>
           </div>
           <div>
-            <h4>Layoutdiagram</h4>
             <img src="img/layoutdiagram_website.png" alt="" />
+            <figcaption>Layoutdiagram</figcaption>
           </div>
         </div>
       </section>
