Rettelser og mere indold

--- a/emnesite.html
+++ b/emnesite.html
@@ -146,9 +146,11 @@
       <p></p> -->
       <section class="baggrund">
         <h4>Se det færdige produkt her:</h4>
-        <a href="https://idaholmterp.dk/kea/03_ux/01_kodet_site/index.html"
-          >Website</a
-        >
+        <a
+          href="https://idaholmterp.dk/kea/03_ux/01_kodet_site/index.html"
+          target="_blank"
+          >Website <i class="arrow"></i
+        ></a>
       </section>
     </main>
     <footer class="grid_1-1-1">
