--- a/spil.html
+++ b/spil.html
@@ -75,7 +75,7 @@
           </p>
           <div class="grid_1-1-1">
             <div>
-              <h4>Kodet spil</h4>
+              <!-- <h4>Kodet spil</h4> -->
               <p>
                 Efter at havde fundet en idé til spillet med gode og dårlige
                 elementer, lavede jeg aktivitetdiagram og state machine-diagram
@@ -91,20 +91,38 @@
             />
           </div>
         </div>
+        <div>
+          <h4>Kode</h4>
+          <p>
+            Ud fra aktivitetdiagrammet og statemachine-diagrammet begyndt jeg at
+            progræmere spillet. For at få spil elementerne til at besvæge sig
+            brugte jeg CSS-animation. Derudover har jeg brugt JavaScript til at
+            få tiden til at løbe ud, få eller miste point samt tænde og slukke
+            for musikken mm.
+          </p>
+        </div>
         <!-- </div> -->
       </section>
-      <!-- <section class="baggrund">
-        <h4>Design</h4>
-      </section>
-      <section class="baggrund1">
-        <h4>Kodet spil</h4>
-        <p></p>
-      </section> -->
       <section class="baggrund">
-        <h4>Se det færdige produkt her:</h4>
-        <a href="https://idaholmterp.dk/kea/04_animation/website/index.html"
-          >Website</a
-        >
+        <div class="grid_1-1">
+          <div>
+            <h4>Se det færdige produkt her:</h4>
+            <a
+              class="website"
+              href="https://idaholmterp.dk/kea/04_animation/website/index.html"
+              target="_blank"
+              >Website <i class="arrow"></i
+            ></a>
+          </div>
+          <div>
+            <h4>Nye kompenancer</h4>
+            <ul>
+              <li>CSS-animation</li>
+              <li>illustrator</li>
+              <li>JavaScript</li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="grid_1-1-1">
