--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -85,8 +85,9 @@
         <a
           class="website"
           href="https://idaholmterp.dk/kea/05_indhold/virksomhedsite/index.html"
-          >Website</a
-        >
+          target="_blank"
+          >Website <i class="arrow"></i
+        ></a>
       </section>
     </main>
     <footer class="grid_1-1-1">
