--- a/website.html
+++ b/website.html
@@ -150,11 +150,12 @@
             <a
               class="website"
               href="https://idaholmterp.dk/02_web/01_website/website/index.html"
+              target="_blank"
               >Website <i class="arrow"></i
             ></a>
           </div>
           <div>
-            <h4>Kompenancer</h4>
+            <h4>Nye kompenancer</h4>
             <ul>
               <li>HTML</li>
               <li>CSS</li>
