--- a/passion.html
+++ b/passion.html
@@ -83,8 +83,9 @@
         <a
           class="website"
           href="https://idaholmterp.dk/kea/04_animation/website/index.html"
-          >Website</a
-        >
+          target="_blank"
+          >Website <i class="arrow"></i
+        ></a>
       </section>
     </main>
     <footer class="grid_1-1-1">
