--- a/emnesite.html
+++ b/emnesite.html
@@ -27,7 +27,9 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
-      <a href="index.html"><img src="img/forside.webp" alt="" /></a>
+      <a class="logo" href="index.html"
+        ><img src="img/forside.webp" alt="Logo"
+      /></a>
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
