--- a/passion.html
+++ b/passion.html
@@ -27,7 +27,9 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
-      <img src="img/forside.webp" alt="" />
+      <a class="logo" href="index.html"
+        ><img src="img/forside.webp" alt="Logo"
+      /></a>
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
@@ -79,13 +81,26 @@
       <h4>Billeder</h4>
       <h4>Hero section</h4> -->
       <section class="baggrund">
-        <h4>Se det færdige produkt her:</h4>
-        <a
-          class="website"
-          href="https://idaholmterp.dk/kea/04_animation/website/index.html"
-          target="_blank"
-          >Website <i class="arrow"></i
-        ></a>
+        <div class="grid_1-1">
+          <div>
+            <h4>Se det færdige produkt her:</h4>
+            <a
+              class="website"
+              href="https://idaholmterp.dk/kea/04_animation/website/index.html"
+              target="_blank"
+              >Website <i class="arrow"></i
+            ></a>
+          </div>
+          <div>
+            <h4>Nye kompenancer</h4>
+            <ul class="icon">
+              <li>Implementering af video i HTML</li>
+              <li>Primerie pro</li>
+              <li>Aftereffect</li>
+              <li>LottieFile</li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="grid_1-1-1">
