--- a/spil.html
+++ b/spil.html
@@ -27,7 +27,9 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
-      <img src="img/forside.webp" alt="" />
+      <a class="logo" href="index.html"
+        ><img src="img/forside.webp" alt="Logo"
+      /></a>
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
@@ -116,7 +118,7 @@
           </div>
           <div>
             <h4>Nye kompenancer</h4>
-            <ul>
+            <ul class="icon">
               <li>CSS-animation</li>
               <li>illustrator</li>
               <li>JavaScript</li>
