--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -28,7 +28,9 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
-      <img src="img/forside.webp" alt="" />
+      <a class="logo" href="index.html"
+        ><img src="img/forside.webp" alt="Logo"
+      /></a>
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
